# todo-cli

./: .env  .gitignore  Cargo.toml  README.md
db/: db.sqlite
src/: ascii.rs  cli_args.rs  db_handlers.rs  lib.rs  main.rs  menu.rs  models.rs  schema.rs
