[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
ansi_term = "0.12.1"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"